# alembic

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
app/: config.py  database.py  main.py
app/models/: __init__.py  base.py  driver.py  trip.py  user.py
app/repository/: crud.py
app/routers/: background_tasks_advanced_dependencies.py  drivers.py  trips.py  users.py
app/schemas/: base.py  driver.py  trip.py  user.py
migrations/: env.py
migrations/versions/: 2024_03_03_1630-64ec9a0a8787_.py
tests/: db_utils.py  utils.py
tests/migrations/: conftest.py  env.py  test_stairway.py
tests/test_routes/: conftest.py  test_driver.py  test_trip.py  test_users.py
